Added NBIoT code. Attempted to indent BSD style

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,5 @@
-all: http_uploader.c comms_posix.c http_funcs.c client.c
-	gcc http_uploader.c comms_posix.c http_funcs.c client.c -o upload
+desktop: http_uploader.c comms_posix.c http_funcs.c client.c
+	gcc http_uploader.c comms_posix.c http_funcs.c client.c -o upload_desktop
+
+nbiot: http_uploader.c comms_serial.c http_funcs.c client.c
+	gcc http_uploader.c comms_serial.c http_funcs.c client.c -o upload_nbiot
