--- a/client/Makefile
+++ b/client/Makefile
@@ -1,5 +1,5 @@
-desktop: http_uploader.c comms_posix.c http_funcs.c client.c
-	gcc http_uploader.c comms_posix.c http_funcs.c client.c -o upload_desktop
+desktop: http_client.c comms_posix.c http_funcs.c main.c
+	gcc http_client.c comms_posix.c http_funcs.c main.c -o client_desktop
 
-nbiot: http_uploader.c comms_serial.c http_funcs.c client.c
-	gcc http_uploader.c comms_serial.c http_funcs.c client.c -o upload_nbiot
+nbiot: http_client.c comms_serial.c http_funcs.c main.c
+	gcc http_client.c comms_serial.c http_funcs.c main.c -o client_nbiot
